Set Memory Usage limits